--- a/backend/package.json
+++ b/backend/package.json
@@ -7,17 +7,22 @@
     "start": "node index.js",
     "test": "echo \"no tests\" && exit 0"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.13.0",
     "cors": "^2.8.5",
     "express": "^5.1.0"
   },
   "devDependencies": {
     "morgan": "^1.10.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "prisma": "^6.13.0"
   }
 }
