Changes to be committed: 	modified:   .gitignore 	modified:   backend/.gitignore 	modified:   backend/app.js 	modified:   backend/index.js 	new file:   backend/middleware/adminKey.js 	new file:   backend/middleware/auth.js 	new file:   backend/middleware/cors.js 	modified:   backend/package-lock.json 	modified:   backend/package.json 	modified:   backend/prisma/dev.db 	new file:   backend/prisma/migrations/20250812161044_add_restaurant/migration.sql 	modified:   backend/prisma/schema.prisma 	modified:   backend/prisma/seed.js 	modified:   backend/routes/menu.js 	modified:   backend/routes/orders.js 	modified:   frontend/api/api.ts 	modified:   frontend/screens/OrderStatusScreen.tsx 	modified:   package-lock.json 	modified:   package.json

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,9 @@ yarn-error.*
 
 # typescript
 *.tsbuildinfo
+
+# prisma undtagelse fra git................
+backend/prisma/dev.db
+backend/prisma/dev.db-wal
+backend/prisma/dev.db-shm
+backend/prisma/dev.db-journal
